# algorithmic-trading-system

./: .gitattributes  .gitignore  LICENSE  README.md  demo.sh  market_data.csv
.github/workflows/: ci.yml
data/market_data/: aapl_20250717.parquet  qqq_20250717.parquet  spy_20250717.parquet
docs/: PERFORMANCE.md  architecture.md
src/cpp_core/: CMakeLists.txt
src/cpp_core/include/: fix_parser.h  market_maker.h  order_book.h  smart_order_router.h
src/cpp_core/src/: backtest_engine.cpp  detailed_perf.cpp  fix_parser.cpp  fix_test.cpp  main.cpp  market_maker.cpp  mm_test.cpp  order_book.cpp  order_book_benchmark.cpp  profile_matching.cpp  replay_tool.cpp  signal_backtest_engine.cpp  smart_order_router.cpp  sor_test.cpp  websocket_client.cpp
src/python/: pyproject.toml  requirements.txt  setup.py
src/python/scripts/: dashboard.py  download_data.py  run_backtest.py
src/python/trading_framework/: __init__.py
src/python/trading_framework/analytics/: __init__.py  metrics.py  trade_metrics.py  visualization.py
src/python/trading_framework/backtesting/: __init__.py  engine.py
src/python/trading_framework/core/: __init__.py  data_loader.py  strategy.py
src/python/trading_framework/strategies/: __init__.py  mean_reversion_rsi.py  simple_ma_cross.py
src/rust_core/: Cargo.toml  proper_rust_bench.txt
src/rust_core/benches/: order_book_benchmark.rs
src/rust_core/src/: lib.rs  main.rs  market_maker.rs  order_book.rs  smart_order_router.rs
test_data/: sample_market_data.csv  sample_market_data_active.csv  volatile_market.csv
